# BrewBoard

./: .gitignore  README.md
BrewBoardServer/: Cargo.toml
BrewBoardServer/src/: main.rs
BrewBoardServer/testing/: brew_description.html  brew_edit.html  recipe_list.html
brewboard-gui/: Cargo.toml
brewboard-gui/src/: brew_screen.rs  countdown_screen.rs  default_screen.rs  finish_screen.rs  main.rs  settings_screen.rs
brewboard-server/: Cargo.toml
brewboard-server/src/: main.rs
brewboard-server/testing/: brew_list.html  manual_recipe.html  pour_question.html  recipe.json  recipe_description.html  root_page.html
