[package]
name = "BrewBoardServer"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = "0.8.8"
axum-extra = { version = "0.12.5", features = ["form"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
http-body-util = "0.1.3"
mime = "0.3.17"
tower = "0.5.2"
