[package]
name = "brewboard-gui"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres", "time" ] }
iced = { version = "0.14.0", features = ["tokio"] }
dotenvy = "0.15.7"
time = { version="0.3", features = ["std", "formatting", "local-offset"] }
