[package]
name = "brewboard-server"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = { version = "0.8.8", features = ["multipart"] }
axum-extra = { version = "0.12.5", features = ["form"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres", "time" ] }
dotenvy = "0.15.7"
time = { version="0.3", features = ["std", "formatting", "local-offset"] }

[dev-dependencies]
http-body-util = "0.1.3"
mime = "0.3.17"
tower = "0.5.2"
